feat: implementa registro de logs e limitação de requisições
- Adiciona funcionalidade de registro de logs para monitoramento.
- Implementa middleware para limitar requisições e prevenir ataques DDoS.

refactor: atualiza rota de notas para usar ID

- Modifica a rota 'notes' para '/pages/:id'.
- A rota agora busca notas baseadas no ID fornecido.

chore: inicia implementação de testes com Jest

- Começa a adicionar testes usando Jest.
- Observação: Testes ainda estão em desenvolvimento e não funcionais, mas não afetam o funcionamento da API.
